# iam-privesc-mapper

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements-fuzz.txt
.claude/: settings.json
.github/workflows/: ci.yml  codeql.yml  fuzzing.yml  gitleaks.yml  scorecard.yml
fixtures/: sample_account.json
fuzz/: fuzz_build_principals.py
src/iam_privesc/: __init__.py  cli.py  detect.py  live.py  models.py  parser.py  render.py  report.py  techniques.py
tests/: test_detect.py  test_render.py
